# ECG-SoC-Integrated

./: .gitattributes  .gitignore  FINAL_REPORT_KR.md  INTEGRATION_AUDIT.md  LICENSE_OR_PROVENANCE.md  PROJECT_FILE_MANIFEST.md  README.md  REPRODUCIBILITY_KR.md  START_HERE_KR.md  WORKSPACE_INVENTORY_KR.md
analysis/: README_KR.md
benchmarks/accelerator_benefit/exact_cpp/: CMakeLists.txt  README.md  READY_FOR_EXACT_CPP_BENCHMARK.md
benchmarks/accelerator_benefit/exact_cpp/include/: fixed_width.hpp  locked_parameters.hpp  model_types.hpp  trace_types.hpp
benchmarks/accelerator_benefit/exact_cpp/reports/: BENCHMARK_ENVIRONMENT.md  CADENCE_COMPRESSION_JUSTIFICATION.md  EXACT_CPP_DESIGN.md  EXACT_CPP_EQUIVALENCE.md  EXACT_CPP_PERFORMANCE_BENCHMARK.md  RTL_SEMANTICS_INVENTORY.md  SOURCE_PROVENANCE.md
benchmarks/accelerator_benefit/exact_cpp/results/: build_identity.csv  cpp_snapshot_trace.csv  equivalence_summary.json  exact_cpp_cpu_raw.csv  fixed_width_test_summary.json  integrity_check.json  module_microtrace_equivalence.csv  performance_integrity.json  post_benchmark_equivalence.json  sample_state_hash_equivalence.csv  snapshot_equivalence.csv  snapshot_equivalence_summary.json
benchmarks/accelerator_benefit/exact_cpp/src/: exact_model.cpp  final_membrane.cpp  main.cpp  snapshot_readout.cpp
benchmarks/accelerator_benefit/exact_cpp/tests/: test_adversarial_sequences.cpp  test_feature_blocks.cpp  test_fixed_width.cpp
benchmarks/accelerator_benefit/exact_cpp/tools/: check_exact_cpp_integrity.py  check_performance_benchmark.py  generate_golden_traces.py  generate_locked_parameters.py  generate_sample_state_hashes.py  post_benchmark_equivalence.py  run_cpp_equivalence.py  run_xsim_sample_hash.py  run_xsim_trace.py  summarize_equivalence.py  tb_exact_cpp_sample_hash.v  tb_exact_cpp_snapshot_trace.v  verify_build_identity.py
configs/: final_submission_locked_model.json
datasets/: DATASET_LICENSES.md  README.md  SHA256SUMS_EXPECTED.txt  dataset_manifest.yaml  requirements-reproduction.txt
design/: README_KR.md
docs/: ABLATION_STUDY_KR.md  AFE_ADC_XMODEL_FLOW_KR.md  AFE_XMODEL_EVIDENCE_KR.md  AWARD_READINESS_GAP_ANALYSIS_KR.md  (+50 more)
(+1624 files in other folders)
